<resources>
    <string name="app_name">BP Montor</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered? Log In.</string>
    <string name="welcome">Welcome</string>

    <!-- Main Activity Buttons -->
    <string name="view_med_hist">Medication History</string>
    <string name="view_bp_hist">Blood Pressure History</string>
    <string name="view_med_sched">Medication Schedule</string>
    <string name="record_bp">Record Blood Pressure</string>
    <string name="record_med">Record Taken Medication</string>

    <string name="date_select">Select Date</string>
    <string name="update_btn">UPDATE</string>
    <string name="select_new_time">Select New Time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="record_medication_now">RECORD MEDICATION NOW</string>
    <string name="retry">RETRY</string>
    <string name="select_patient">SELECT PATIENT</string>
    <string name="full_name">Full Name</string>
    <string name="select_time">Select Time</string>
    <string name="record_entry_now">Record Entry NOW</string>
    <string name="diastolic">Diastolic</string>
    <string name="systolic">Systolic</string>
    <string name="add_update_doctor">Add/Update Doctor</string>
    <string name="update_med_schedule">Update Med Schedule</string>
    <string name="hello_doctor">Hello Doctor!</string>
    <string name="hello_patient">Hello Patient!</string>
    <string name="logout">LOGOUT</string>
    <string name="delete">DELETE</string>
    <string name="new_medicine_name">New Medicine Name</string>
    <string name="add_now">ADD NOW</string>
</resources>
