<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cecs343.bpmontor.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/view_med_sched"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_med_sched"
            app:layout_constraintStart_toStartOf="@+id/button3"
            tools:layout_editor_absoluteY="25dp" />

        <Button
            android:id="@+id/view_med_hist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_med_hist"
            app:layout_constraintStart_toStartOf="@+id/button2"
            tools:layout_editor_absoluteY="91dp" />

        <Button
            android:id="@+id/view_bp_hist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_bp_hist"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="150dp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
