<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cecs343.bpmontor.MainActivity">

    <TextView
        android:id="@+id/doctitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Doctor"
        android:textAllCaps="true"
        android:textSize="20sp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_below="@id/doctitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/sel_patient_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SELECT PATIENT"
                android:textSize="20sp" />

            <Button
                android:id="@+id/view_med_sched"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sel_patient_btn"
                android:text="@string/view_med_sched"
                android:textSize="20sp" />

            <Button
                android:id="@+id/view_med_hist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_med_sched"
                android:text="@string/view_med_hist"
                android:textSize="20sp" />

            <Button
                android:id="@+id/view_bp_hist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_med_hist"
                android:text="@string/view_bp_hist"
                android:textSize="20sp" />

            <Button
                android:id="@+id/update_sched"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_bp_hist"
                android:textSize="20sp"
                android:text="Update Med Schedule" />

            <Button
                android:id="@+id/record_bp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/update_sched"
                android:textSize="20sp"
                android:text="@string/record_bp" />

            <Button
                android:id="@+id/record_meds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/record_bp"
                android:textSize="20sp"
                android:text="@string/record_med" />



        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/add_doc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logout"
        android:textSize="20sp"
        android:text="Add/Update Doctor" />


    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:textSize="20sp"

        android:text="LOGOUT" />
</RelativeLayout>